# imbue-minds-pulse

./: .gitignore  CLAUDE.md  Dockerfile  README.md  conftest.py  inspiration-minds-pulse.md  mngr_cli_contract.py  mngr_cli_contract_test.py  pyproject.toml  services.toml  supervisord.conf  test_mngr_cli_argv_contract.py
.claude/: settings.json
.mngr/: settings.toml
.reviewer/: settings.json
apps/system_interface/: README.md  pyproject.toml
blueprint/ai-driven-services/: plan-ai-driven-services.md
blueprint/chat-progress-view/: plan-chat-progress-view.md
blueprint/claude-login-modal/: plan-claude-login-modal.md
blueprint/end-of-turn-progress-rendering/: plan-end-of-turn-progress-rendering.md
changelog/: mngr-explore-ssh-starting.md  modal-minds-compute-provider.md  preston-minds-inspirations.md  preston-minds-md-images.md
docs/: system_services_restart_audit.md
libs/host_backup/: README.md
libs/minds_pulse/: README.md  collector_test.py  pricing_test.py  pyproject.toml
libs/minds_pulse/src/minds_pulse/: collector.py  pricing.py  runner.py  system_monitor.py
libs/minds_pulse/src/minds_pulse/assets/: index.html
scripts/: _provision_guard.sh  build_frontend_if_changed.py  build_frontend_if_changed_test.py  build_workspace.sh  claude_block_todowrite.sh  claude_require_steps_pretool.sh  claude_tk_standalone.sh  claude_tk_standalone_check.py  claude_tk_standalone_check_test.py  detect_crystallization_candidate.py  detect_crystallization_candidate_test.py  fct_entrypoint.sh  minds_install_outer_autostart.sh  run_ttyd.sh  setup_system.sh
(+200 files in other folders)
