[project]
name = "minds-pulse"
version = "0.1.0"
description = "Host-wide AI/LLM usage and cost tracker with per-agent and per-workspace line items"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-sock>=0.7",
    "werkzeug>=3.0",
    "psutil>=5.9",
]

[project.scripts]
minds-pulse = "minds_pulse.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/minds_pulse"]
